# gedit-bidiassist

./: Makefile.am  Makefile.in  README.md  bidiassist.c  bidiassist.gedit-plugin.desktop.in
